--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
 		"react": "^16.0.0",
 		"react-dev-utils": "^4.2.2",
 		"react-dom": "^16.0.0",
+		"react-redux": "^7.1.3",
 		"react-router-dom": "^4.2.2",
+		"redux": "^4.0.5",
 		"style-loader": "0.18.2",
 		"sw-precache-webpack-plugin": "0.11.4",
 		"url-loader": "0.5.9",
 		"webpack": "3.5.1",
-		"webpack-dev-server": "3.1.11",
+		"webpack-dev-server": "^2.11.5",
 		"webpack-manifest-plugin": "1.2.1",
 		"whatwg-fetch": "2.0.3"
 	},
