--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"autoprefixer": "7.1.2",
-		"axios": "^0.18.1",
+		"axios": "^0.19.2",
 		"babel-core": "6.25.0",
 		"babel-eslint": "7.2.3",
 		"babel-jest": "20.0.3",
@@ -39,6 +39,7 @@
 		"react-redux": "^7.1.3",
 		"react-router-dom": "^4.2.2",
 		"redux": "^4.0.5",
+		"redux-thunk": "^2.3.0",
 		"style-loader": "0.18.2",
 		"sw-precache-webpack-plugin": "0.11.4",
 		"url-loader": "0.5.9",
